side bar z-index fixed

--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -103,6 +103,7 @@ button{
   width: 100%;
   height: 100%;
   background: #6E6E6E50;
+  z-index: 200;
 }
 
 .side-bar {
